# pumpdraft

./: DEPLOYMENT.md  check_tokens.js  next.config.ts  package-lock.json  package.json  vercel.json
anchor/: Anchor.toml
anchor/programs/pumpdraft/: Cargo.toml
anchor/programs/pumpdraft/src/: lib.rs
scripts/: wipe_points.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/api/cron/ingest/: route.ts
src/app/api/cron/settle/: route.ts
src/app/api/hot-tokens/: route.ts
src/app/api/pump-tokens/: route.ts
src/app/api/resolve-bet/: route.ts
src/app/api/seed-pool/: route.ts
src/app/api/token-lookup/: route.ts
src/app/app/: page.tsx
src/app/disclaimer/: page.tsx
src/app/leaderboard/: page.tsx
src/app/privacy/: page.tsx
src/app/profile/: page.tsx
src/app/terms/: page.tsx
src/components/: AppNav.tsx  DexScreenerChart.tsx  FloatingPills.tsx  Footer.tsx  Header.tsx  HotTokensTicker.tsx  Leaderboard.tsx  PolynaTerminal.tsx  PredictionConsole.tsx  TerminalConsole.tsx  TokenSubmission.tsx
src/hooks/: useBetResolver.ts  useSupabaseLeaderboard.ts  useSupabasePool.ts  useTokenTier.ts
src/lib/: pumpdraft.json  supabase.ts
src/providers/: AuthProvider.tsx  PointsProvider.tsx  SolanaProvider.tsx
supabase/: functions.sql  schema.sql
