[package]
name = "pumpdraft"
version = "0.1.0"
description = "PumpDraft Prediction Market Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pumpdraft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
